Doughnut chart and label structure

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,10 +16,6 @@
   padding: 0;
 }
 
-h1{
-  font-size: 35px;
-}
-
 .App {
   text-align: center;
   padding: 4em 0;
@@ -29,6 +25,15 @@ h1{
   background-color: var(--color-yellow);
 }
 
-.bg-purplr{
+.bg-purple{
   background-color: var(--color-purple);
+}
+
+.chart .title {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
